--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,10 @@
     "ghcr.io/devcontainers/features/docker-in-docker:2": {
       "version": "latest",
       "dockerDashComposeVersion": "none"
+    },
+    "ghcr.io/devcontainers/features/github-cli:1": {
+      "installDirectlyFromGitHubRelease": true,
+      "version": "latest"
     }
   },
   "customizations": {
@@ -29,8 +33,8 @@
         "marp-team.marp-vscode"
       ]
     }
-  }
+  },
   // "forwardPorts": [3000],
-  // "postCreateCommand": ""
+  // "postCreateCommand": "",
   // "remoteUser": "node"
 }
