--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "textlint.nodePath": "/workspaces/presentation-202405/node_modules",
+  "markdown.marp.enableHtml": true,
   "markdown.marp.themes": [
     "https://raw.githubusercontent.com/kaisugi/marp-theme-academic/main/themes/academic.css"
   ]
