--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Urotea",
   "license": "MIT",
   "devDependencies": {
+    "@marp-team/marp-cli": "^3.4.0",
+    "@marp-team/marp-core": "^3.9.0",
     "lefthook": "^1.6.10",
     "textlint": "^14.0.4",
     "textlint-rule-preset-ja-technical-writing": "^10.0.1",
