スライドを整えた

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,8 @@
         "taichi.vscode-textlint",
         "GitHub.copilot-chat",
         "GitHub.vscode-github-actions",
-        "marp-team.marp-vscode"
+        "marp-team.marp-vscode",
+        "bierner.emojisense"
       ]
     }
   },
